[workspace]
resolver = "2"
members = ["contracts/*", "common"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 's'
debug = false
codegen-units = 1
panic = 'abort'
strip = true

[workspace.dependencies]
chrono = "0.4"
ed25519-dalek = { version = "1", features = ["serde"], default-features = false }
rsa = { version = "0.8.2", default-features = false, features = ["serde", "pem"] }
serde = "1"
serde_json = "1"
serde_bytes = "0.11.9"
once_cell = "1"
bincode = "1"
bs58 = "0.4.0"
blake3 = "1.3.3"

locutus-stdlib = { path = "../../crates/locutus-stdlib" }
locutus-aft-interface = { path = "../../modules/antiflood-tokens/interfaces" }