[package]
name = "dataproc-job-contract"
version = "0.0.1"
edition = "2021"
rust-version = "1.58.0"
resolver = "2"
publish = false

[dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["alloc", "serde"] }
locutus-stdlib = { path = "../../../../crates/locutus-stdlib" }
rsa = { version = "0.9.2", default-features = false, features = ["serde", "pem", "sha2"] }
ecdsa = { version = "0.16.6", default-features = false, features = ["serde", "pem", "sha2"] }
p256 = "0.13.2"
antiflood-tokens = { path = "../../../../modules/antiflood-tokens/interfaces", package = "locutus-aft-interface" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
common = { path = "../../common", package = "locutus-dataproc-common" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
contract = []
wasmbind = ["chrono/wasmbind"]